<resources>
    <string name="app_name">EventsApp</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>

    <string name="welcome">Welcome</string>
    <string name="events">Events</string>
    <string name="my_events">My Events</string>
    <string name="friends">Friends</string>
    <string name="no_upcoming_events">No upcoming events</string>

    <string name="interested_events">Interested Events</string>
    <string name="attending_events">Attending Events</string>
    <string name="my_profile">My Profile</string>

    <string name="password">Password</string>
    <string name="end_session">End Session</string>

    <string name="change_password">Change password</string>
    <string name="current_password_hint">Current password</string>
    <string name="new_password_hint">New password</string>
    <string name="save">Save</string>
    <string name="password_changed">Password successfully changed</string>

</resources>